test/success/integration/_succ_expr_intdiv_1.hs
x :: Int
x = 4 div 3
main = print "hello"