test/fail/integration/_fail_grammar_expr_intdiv_2.hs
x :: Int
x = 4 div jl
main = print "hello"